--- a/index.html
+++ b/index.html
@@ -19,30 +19,130 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="feedbase" class="anchor" href="#feedbase" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Feedbase</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This small, self-contained Ethereum contract lets you create "feeds"
+that you can use to publish arbitrary 32-byte values, with attached
+expiration dates to prevent consumers from reading stale data.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Perhaps most interestingly, the owner of a feed has the ability to tax
+on-chain consumers (i.e., smart contracts) for making use of the feed.
+This happens at most once for each feed value (to the first consumer).
+The reason for this is that you couldn't really prevent anyone from
+creating a simple contract that would repeat your feed values anyway.
+However, you're free to publish new values again as often as you want.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The prices can be changed at any time, although for security reasons
+the address of the underlying ERC20 token can only ever be set once.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>One obvious application of Feedbase is publishing financial data to
+smart contracts that rely on "oracles" in a nice, standardized way.
+Another interesting use case is for configuration of smart contracts.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Think of Feedbase as a piece of low-level Ethereum infrastructure:
+it's free for anyone to use, and not owned or controlled by anyone.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting started</h2>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Feedbase comes with a simple commmand-line tool for managing feeds:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<pre><code>npm install -g feedbase
+</code></pre>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>For anything to happen, you obviously need to run an Ethereum node:</p>
+
+<pre><code>geth --testnet --rpc --unlock 7
+</code></pre>
+
+<h2>
+<a id="working-with-feeds" class="anchor" href="#working-with-feeds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Working with feeds</h2>
+
+<p>To start putting out values, first you need to claim your feed:</p>
+
+<pre><code>feedbase claim
+</code></pre>
+
+<p>If you want to be able to tax your smart contract consumers, this step
+is where you specify the address of your (ERC20-compatible) token:</p>
+
+<pre><code>feedbase claim 0x4244e29ec71fc32a34dba8e89d4856e507d1bc87
+</code></pre>
+
+<p>If nothing goes wrong (sad to say, the CLI is a bit flaky sometimes),
+within a minute you should see something like this:</p>
+
+<pre><code>{
+  "id": "7302",
+  "token": "0x0000000000000000000000000000000000000000",
+  "owner": "0x34e510285d96cdc6063d5447763afea0acd61baa",
+  "label": "",
+  "price": "0x0",
+  "timestamp": 0,
+  "expiration": 0,
+  "unpaid": false
+}
+</code></pre>
+
+<p>Now you can do a few things.  You can inspect the feed at will:</p>
+
+<pre><code>feedbase inspect 7302
+</code></pre>
+
+<p><strong>Note:</strong>  Unfortunately, although you are an off-chain consumer who
+can in principle read the value of any feed for free, the <code>feedbase
+inspect</code> command cannot currently display the actual value of a feed.</p>
+
+<p>You can set an arbitrary label (32 bytes maximum):</p>
+
+<pre><code>feedbase set-label 7302 "Temperature in Central Park"
+</code></pre>
+
+<p>If you specified a token, you can change the price:</p>
+
+<pre><code>feedbase set-price 7302 0x10000000
+</code></pre>
+
+<p>You can transfer ownership of the feed to another account:</p>
+
+<pre><code>feedbase set-owner 7302 0x4b51d646f0e3677411b27101d2a3f09223a8372e
+</code></pre>
+
+<p>You can also continuously watch the blockchain for all Feedbase events:</p>
+
+<pre><code>feedbase watch
+</code></pre>
+
+<p>Now, to actually update the feed value, you'd use a command like this:</p>
+
+<pre><code>feedbase set 7302 0x0000000000000000000000000000000490000000000000000000000000000000 1467204471
+</code></pre>
+
+<p>Here, we're setting the value of feed number 7302 to the number 73
+represented in 128x128 fixed-point notation.  The expiration date is
+set to June 29 12:47:51 UTC 2016 (represented in standard Unix time).</p>
+
+<p>Again, the values can be anything as long as they fit within 32 bytes.</p>
+
+<p>That's it!</p>
+
+<h2>
+<a id="more-information" class="anchor" href="#more-information" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>More information</h2>
+
+<p>For more details, take a look at the following files:</p>
+
+<pre><code>contracts/feedbase.sol
+contracts/feedbase_test.sol
+bin/feedbase
+lib/feedbase.js
+</code></pre>
+
+<p>You can also check out Keeper (<a href="https://github.com/nexusdev/keeper">https://github.com/nexusdev/keeper</a>),
+an "admin toolkit for incentive-following software daemons," designed
+to do things like publishing price feeds to blockchains.</p>
+
+<p>Happy hacking!</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nexusdev/feedbase">Feedbase</a> is maintained by <a href="https://github.com/nexusdev">nexusdev</a>.</span>
